Update warps to core 1.0.0 lib, refactor commands and manager
Bundle simplybetter-core 1.0.0 jars in libs, drop WarpPoint in favor
of core DTOs, rework WarpCommands/WarpManager/server entrypoint,
add contribution docs, driver stress-test script and CLAUDE.md.

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>