@@ -1,49 +1,55 @@
 package as.sirhephaistos;
 
+import as.sirhephaistos.simplybetter.library.WarpDTO;
 import com.mojang.brigadier.Command;
 import com.mojang.brigadier.CommandDispatcher;
 import com.mojang.brigadier.arguments.StringArgumentType;
 import com.mojang.brigadier.suggestion.SuggestionProvider;
 import me.lucko.fabric.api.permissions.v0.Permissions;
 import net.fabricmc.fabric.api.util.TriState;
-import net.minecraft.command.CommandSource;
-import net.minecraft.registry.RegistryKey;
-import net.minecraft.registry.RegistryKeys;
-import net.minecraft.server.command.ServerCommandSource;
-import net.minecraft.server.network.ServerPlayerEntity;
-import net.minecraft.server.world.ChunkTicketType;
-import net.minecraft.server.world.ServerWorld;
-import net.minecraft.text.*;
-import net.minecraft.util.Identifier;
-import net.minecraft.util.math.BlockPos;
-import net.minecraft.util.math.ChunkPos;
-import net.minecraft.world.World;
+import net.minecraft.commands.CommandSourceStack;
+import net.minecraft.core.registries.Registries;
+import net.minecraft.network.chat.MutableComponent;
+import net.minecraft.resources.ResourceKey;
+import net.minecraft.server.level.ServerLevel;
+import net.minecraft.server.level.ServerPlayer;
+import net.minecraft.server.level.TicketType;
+import net.minecraft.world.level.Level;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
+import net.minecraft.commands.SharedSuggestionProvider;
+import net.minecraft.core.BlockPos;
+import net.minecraft.network.chat.ClickEvent;
+import net.minecraft.network.chat.Component;
+import net.minecraft.network.chat.HoverEvent;
+import net.minecraft.resources.ResourceLocation;
+import net.minecraft.world.level.ChunkPos;
+import static net.minecraft.commands.Commands.argument;
+import static net.minecraft.commands.Commands.literal;
+
+
 
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Objects;
-
-import static net.minecraft.server.command.CommandManager.argument;
-import static net.minecraft.server.command.CommandManager.literal;
+import java.util.Optional;
 
 public final class WarpCommands {
     private static final Logger LOGGER = LoggerFactory.getLogger("simplybetter-warps");
     // --- Suggestion provider: list of warps the user can see ---
-    private static final SuggestionProvider<ServerCommandSource> WARP_NAME_SUGGESTER = (ctx, builder) -> {
+    private static final SuggestionProvider<CommandSourceStack> WARP_NAME_SUGGESTER = (ctx, builder) -> {
         var wManager = WarpManager.get();
         var src = ctx.getSource();
         var warps = wManager.listWarps().keySet().stream()
                 .filter(name -> canSeeWarp(src, name))
                 .sorted()
                 .toArray(String[]::new);
-        return CommandSource.suggestMatching(warps, builder);
+        return SharedSuggestionProvider.suggest(warps, builder);
     };
 
     private WarpCommands() {
     }
-    private static boolean checkWildcardOrPerm(ServerCommandSource src, String node, String argument, int opLevelDefault,boolean shouldNegativePermOverride) {
+    private static boolean checkWildcardOrPerm(CommandSourceStack src, String node, String argument, int opLevelDefault,boolean shouldNegativePermOverride) {
         final String permission = node.toLowerCase() + "." + argument.toLowerCase();
         if (shouldNegativePermOverride &&  Permissions.getPermissionValue(src, permission) == TriState.FALSE ) return false;
         return Permissions.check(src, node.toLowerCase() + ".*") || Permissions.check(src, permission, opLevelDefault);
@@ -57,7 +63,7 @@ public final class WarpCommands {
      * @param warpName Name of the warp
      * @return true if the source has permission to see the warp
      */
-    private static boolean canSeeWarp(ServerCommandSource src, String warpName) {
+    private static boolean canSeeWarp(CommandSourceStack src, String warpName) {
         /*return Permissions.check(src, "simplybetter.warps.see." + warpName.toLowerCase(), 1) || Permissions.check(src, "simplybetter.warps.see.*");*/
         return checkWildcardOrPerm(src, "simplybetter.warps.see", warpName,1,true);
     }
@@ -69,7 +75,7 @@ public final class WarpCommands {
      * @param warpName Name of the warp
      * @return true if the source has permission to teleport to the warp
      */
-    private static boolean canTpToWarp(ServerCommandSource src, String warpName) {
+    private static boolean canTpToWarp(CommandSourceStack src, String warpName) {
         /*return Permissions.check(src, "simplybetter.warps.tpto." + warpName.toLowerCase(), 1) || Permissions.check(src, "simplybetter.warps.tpto.*");*/
         return checkWildcardOrPerm(src, "simplybetter.warps.tpto", warpName,1,true);
     }
@@ -77,90 +83,96 @@ public final class WarpCommands {
     /**
      * Register warp commands to the dispatcher.
      */
-    public static void register(CommandDispatcher<ServerCommandSource> dispatcher) {
+    public static void register(CommandDispatcher<CommandSourceStack> dispatcher) {
         // ----- Reusable executors -----
-        Command<ServerCommandSource> HELP_EXECUTOR = ctx -> {
-            ctx.getSource().sendFeedback(() -> Text.literal("""
+        Command<CommandSourceStack> HELP_EXECUTOR = ctx -> {
+            ctx.getSource().sendSuccess(() -> Component.literal("""
                                     [Simply Better Warps] Commands:
-                    /warp <name>      - teleport to a warp in the current dimension
-                    /setwarp <name>   - create or overwrite a warp at your position
-                    /delwarp <name>   - delete a warp in the current dimension
-                    /warps            - list warps in the current dimension
+                    /warp <name>      - teleport to a warp
+                    /setwarp <name>   - create a warp at your position
+                    /delwarp <name>   - delete a warp
+                    /warps            - list warps
                     /warp help        - show this help
                     """), false);
             return 1;
         };
 
-        Command<ServerCommandSource> WARPTP_EXECUTOR = ctx -> {
+        Command<CommandSourceStack> WARPTP_EXECUTOR = ctx -> {
             var source = ctx.getSource();
             var player = source.getPlayer();
             if (player == null) {
-                source.sendError(Text.literal("Only players can use warps."));
+                source.sendFailure(Component.literal("Only players can use warps."));
                 return 0;
             }
             String warpName = StringArgumentType.getString(ctx, "name");
 
             if (!canTpToWarp(source, warpName)) {
-                source.sendError(Text.literal("[Simply Better Warps] You don't have permission to teleport to '" + warpName + "'."));
+                source.sendFailure(Component.literal("[Simply Better Warps] You don't have permission to teleport to '" + warpName + "'."));
                 return 0;
             }
 
             var wManager = WarpManager.get();
             try {
-                WarpPoint wp = wManager.getWarp(warpName);
-                Identifier dimId = Identifier.tryParse(wp.dimensionId());
+                Optional<WarpDTO> owp = wManager.getWarp(warpName);
+                if (owp.isEmpty()) {
+                    source.sendFailure(Component.literal("Warp not found: " + warpName));
+                    return 0;
+                }
+                WarpDTO wp = owp.get();
+                ResourceLocation dimId = ResourceLocation.tryParse(wp.position().dimensionId());
                 if (dimId == null) {
-                    source.sendError(Text.literal("Invalid dimension id on warp: " + wp.dimensionId()));
+                    source.sendFailure(Component.literal("Invalid dimension id on warp: " + wp.position().dimensionId()));
                     return 0;
                 }
-                RegistryKey<World> targetKey = RegistryKey.of(RegistryKeys.WORLD, dimId);
-                ServerWorld targetWorld = Objects.requireNonNull(player.getServer()).getWorld(targetKey);
+                ResourceKey<Level> targetKey = ResourceKey.create(Registries.DIMENSION, dimId);
+                ServerLevel targetWorld = Objects.requireNonNull(player.getServer()).getLevel(targetKey);
                 if (targetWorld == null) {
-                    source.sendError(Text.literal("Target dimension not found on server: " + wp.dimensionId()));
+                    source.sendFailure(Component.literal("Target dimension not found on server: " + wp.position().dimensionId()));
                     return 0;
                 }
-                BlockPos targetPos = BlockPos.ofFloored(wp.x(), wp.y(), wp.z());
+                BlockPos targetPos = BlockPos.containing(wp.position().x(), wp.position().y(), wp.position().z());
                 ChunkPos chunkPos = new ChunkPos(targetPos);
-                targetWorld.getChunkManager().addTicket(ChunkTicketType.POST_TELEPORT, chunkPos, 1, player.getId());
+                targetWorld.getChunkSource().addRegionTicket(TicketType.POST_TELEPORT, chunkPos, 1, player.getId());
                 targetWorld.getChunk(chunkPos.x, chunkPos.z);
-                player.teleport(targetWorld, wp.x(), wp.y(), wp.z(), wp.yaw(), wp.pitch());
-                source.sendFeedback(() -> Text.literal("Teleported to '" + warpName + "' in " + wp.dimensionId() + "."), false);
+                player.teleportTo(targetWorld, wp.position().x(), wp.position().y(), wp.position().z(),
+                        wp.position().yRot(), wp.position().xRot());
+                source.sendSuccess(() -> Component.literal("Teleported to '" + warpName + "' in " + wp.position().dimensionId() + "."), false);
                 return 1;
             } catch (Exception e) {
-                source.sendError(Text.literal(e.getMessage()));
+                source.sendFailure(Component.literal(e.getMessage()));
                 LOGGER.error("[Simply Better Warps] Error during warp teleport:{}", e.getMessage(), e);
                 return 0;
             }
         };
 
-        Command<ServerCommandSource> SETWARP_EXECUTOR = ctx -> {
-            ServerPlayerEntity p = ctx.getSource().getPlayer();
+        Command<CommandSourceStack> SETWARP_EXECUTOR = ctx -> {
+            ServerPlayer p = ctx.getSource().getPlayer();
             String warpName = StringArgumentType.getString(ctx, "name");
             if (p == null) {
-                ctx.getSource().sendError(Text.literal("[Simply Better Warps] Only players can set warps."));
+                ctx.getSource().sendFailure(Component.literal("[Simply Better Warps] Only players can set warps."));
                 return 0;
             }
-            WarpPoint wp = WarpPoint.fromPlayerPosition(p);
             var wManager = WarpManager.get();
-            wManager.setWarp(warpName, wp);
-            ctx.getSource().sendFeedback(() -> Text.literal("[Simply Better Warps] Warp '%s' saved. at %s%s".formatted(
-                    warpName, wp.dimensionId(), String.format(" (%.1f, %.1f, %.1f)", wp.x(), wp.y(), wp.z()))), false);
+            var createdWarp = wManager.setWarp(warpName, null,
+                    p.level().dimension().location().toString(),
+                    p.getX(), p.getY(), p.getZ(),
+                    p.getYRot(), p.getXRot());
+            ctx.getSource().sendSuccess(() -> Component.literal("[Simply Better Warps] Warp '%s' saved. at %s%s".formatted(
+                    warpName,
+                    createdWarp.position().dimensionId(),
+                    String.format(" (%.1f, %.1f, %.1f)", createdWarp.position().x(), createdWarp.position().y(), createdWarp.position().z())
+            )), false);
             return 1;
         };
 
-        Command<ServerCommandSource> DELWARP_EXECUTOR = ctx -> {
+        Command<CommandSourceStack> DELWARP_EXECUTOR = ctx -> {
             String warpName = StringArgumentType.getString(ctx, "name");
-            boolean ok = WarpManager.get().delWarp(warpName);
-            if (ok) {
-                ctx.getSource().sendFeedback(() -> Text.literal("[Simply Better Warps] Warp deleted: " + warpName), false);
-                return 1;
-            } else {
-                ctx.getSource().sendError(Text.literal("[Simply Better Warps] Warp not found: " + warpName));
-                return 0;
-            }
+            WarpManager.get().delWarp(warpName);
+            ctx.getSource().sendSuccess(() -> Component.literal("[Simply Better Warps] Warp deleted: " + warpName), false);
+            return 1;
         };
 
-        Command<ServerCommandSource> LIST_EXECUTOR = ctx -> {
+        Command<CommandSourceStack> LIST_EXECUTOR = ctx -> {
             var src = ctx.getSource();
             var names = WarpManager.get().listWarps().keySet().stream()
                     .filter(name -> canSeeWarp(src, name))
@@ -168,79 +180,73 @@ public final class WarpCommands {
                     .toList();
 
             if (names.isEmpty()) {
-                src.sendFeedback(() -> Text.literal("[Simply Better Warps] Aucun warp visible."), false);
+                src.sendSuccess(() -> Component.literal("[Simply Better Warps] Aucun warp visible."), false);
                 return 1;
             }
 
-            List<Text> clickable = new ArrayList<>();
+            List<Component> clickable = new ArrayList<>();
             for (String name : names) {
                 boolean canTp = canTpToWarp(src, name);
 
-                MutableText item = Text.literal(name);
+                MutableComponent item = Component.literal(name);
 
                 if (canTp) {
-                    item = item.styled(s -> s
-                            .withUnderline(true)
+                    item = item.withStyle(s -> s
+                            .withUnderlined(true)
                             .withClickEvent(new ClickEvent(ClickEvent.Action.RUN_COMMAND, "/warp " + name))
                             .withHoverEvent(new HoverEvent(HoverEvent.Action.SHOW_TEXT,
-                                    Text.literal("Clique pour /warp " + name))));
+                                    Component.literal("Clique pour /warp " + name))));
                 } else {
-                    item = item.styled(s -> s
+                    item = item.withStyle(s -> s
                             .withItalic(true)
                             .withColor(0x7f7f7f)
                             .withHoverEvent(new HoverEvent(HoverEvent.Action.SHOW_TEXT,
-                                    Text.literal("Tu n'as pas la permission de /warp " + name))));
+                                    Component.literal("Tu n'as pas la permission de /warp " + name))));
                 }
 
                 clickable.add(item);
             }
 
-            Text listText;
-            try {
-                listText = Texts.join(clickable, Text.literal(", "));
-            } catch (Throwable ignored) {
-                // Fallback si mappings diffèrent : construire manuellement
-                MutableText tmp = Text.empty();
-                for (int i = 0; i < clickable.size(); i++) {
-                    if (i > 0) tmp.append(Text.literal(", "));
-                    tmp.append(clickable.get(i));
-                }
-                listText = tmp;
+            MutableComponent listText = Component.empty();
+            for (int i = 0; i < clickable.size(); i++) {
+                if (i > 0) listText.append(Component.literal(", "));
+                listText.append(clickable.get(i));
             }
 
-            Text msg = Text.literal("[Simply Better Warps] Warps (" + names.size() + "): ").append(listText);
-            src.sendFeedback(() -> msg, false);
+            Component msg = Component.literal("[Simply Better Warps] Warps (" + names.size() + "): ").append(listText);
+            src.sendSuccess(() -> msg, false);
             return 1;
         };
 
-        Command<ServerCommandSource> INFO_EXECUTOR = ctx -> {
+        Command<CommandSourceStack> INFO_EXECUTOR = ctx -> {
             var source = ctx.getSource();
             String warpName = StringArgumentType.getString(ctx, "name");
 
             if (!canSeeWarp(source, warpName)) {
-                source.sendError(Text.literal("[Simply Better Warps] You don't have permission to teleport to '" + warpName + "'."));
+                source.sendFailure(Component.literal("[Simply Better Warps] You don't have permission to teleport to '" + warpName + "'."));
                 return 0;
             }
-            var warp = WarpManager.get().getWarp(warpName);
-            MutableText msg = Text.literal("[Simply Better Warps] Warp '").append(Text.literal(warpName).styled(s -> s.withColor(0x00ff00)))
-                    .append(Text.literal("': "))
-                    .append(Text.literal(String.format("Dimension: %s, Position: (%.1f, %.1f, %.1f), Yaw: %.1f, Pitch: %.1f",
-                            warp.dimensionId(), warp.x(), warp.y(), warp.z(), warp.yaw(), warp.pitch())));
-            source.sendFeedback(() -> msg, false);
+            var oWarp = WarpManager.get().getWarp(warpName);
+            var warp = oWarp.orElseThrow(() -> new IllegalStateException("Warp not found: " + warpName));
+            MutableComponent msg = Component.literal("[Simply Better Warps] Warp '").append(Component.literal(warpName).withStyle(s -> s.withColor(0x00ff00)))
+                    .append(Component.literal("': "))
+                    .append(Component.literal(String.format("Dimension: %s, Position: (%.1f, %.1f, %.1f), Yaw: %.1f, Pitch: %.1f",
+                            warp.position().dimensionId(), warp.position().x(), warp.position().y(), warp.position().z(), warp.position().yRot(), warp.position().xRot())));
+            source.sendSuccess(() -> msg, false);
             return 1;
         };
 
-        Command<ServerCommandSource> RENAMEWARP_EXECUTOR = ctx -> {
+        Command<CommandSourceStack> RENAMEWARP_EXECUTOR = ctx -> {
             String oldName = StringArgumentType.getString(ctx, "oldname");
             String newName = StringArgumentType.getString(ctx, "newname");
             var wManager = WarpManager.get();
             try {
                 wManager.renameWarp(oldName, newName);
-                ctx.getSource().sendFeedback(() -> Text.literal("[Simply Better Warps] Warp renamed from '%s' to '%s'.".formatted(oldName, newName)), false);
-                ctx.getSource().sendFeedback(() -> Text.literal("[Simply Better Warps] Note: Permissions are not automatically updated. Change them manually from '%s' to '%s'.".formatted(oldName,newName)), false);
+                ctx.getSource().sendSuccess(() -> Component.literal("[Simply Better Warps] Warp renamed from '%s' to '%s'.".formatted(oldName, newName)), false);
+                ctx.getSource().sendSuccess(() -> Component.literal("[Simply Better Warps] Note: Permissions are not automatically updated. Change them manually from '%s' to '%s'.".formatted(oldName,newName)), false);
                 return 1;
             } catch (Exception e) {
-                ctx.getSource().sendError(Text.literal("[Simply Better Warps] " + e.getMessage()));
+                ctx.getSource().sendFailure(Component.literal("[Simply Better Warps] " + e.getMessage()));
                 return 0;
             }
         };
@@ -252,7 +258,7 @@ public final class WarpCommands {
                 literal("simplybetterwarps")
                         .requires(src -> Permissions.check(src, "simplybetter.warps.basic", 1))
                         .executes(ctx -> {
-                            ctx.getSource().sendFeedback(() -> Text.literal("[Simply Better Warps] Usage: /warp help"), false);
+                            ctx.getSource().sendSuccess(() -> Component.literal("[Simply Better Warps] Usage: /warp help"), false);
                             return 1;
                         })
         );
